# rename

./: LICENSE  README.md  rename.cabal  rename.hs
