Name:                rename
Version:             0.0
Description:         Rename you files in editors
License:             BSD
License-file:        LICENSE
Author:              Libor Wagner
Maintainer:          liborwagner@cmp.felk.cvut.cz
homepage:         https://github.com/liborw/rename
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable rename
  Main-is:           rename.hs
  Build-Depends:     base >= 3 && < 5, directory >= 1.0 && < 1.3, process >= 1.0 && < 1.2
